[package]
name = "viperserver"
version = "0.1.0"
edition = "2021"
authors = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
derive_builder = "0.12.0"
derive_more = "0.99.17"
futures = "0.3.26"
itertools = "0.10.5"
j4rs = "0.15.2"
reqwest = { version = "0.11.14", features = ["json", "stream"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
tokio = { version = "1.25.0", features = ["full"] }
tokio-stream = { version = "0.1.11", features = ["io-util", "tokio-util"] }
tokio-util = "0.7.4"

[dev-dependencies]
heck = "0.4.1"
proc-macro2 = "1.0.51"
quote = "1.0.23"
regex = "1.7.1"
